--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "private": true,
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-rc.15",
+    "@vuepress/plugin-back-to-top": "^2.0.0-rc.42",
+    "@vuepress/plugin-blog": "^2.0.0-rc.42",
+    "@vuepress/plugin-copyright": "^2.0.0-rc.42",
+    "@vuepress/plugin-feed": "^2.0.0-rc.42",
+    "@vuepress/plugin-google-analytics": "^2.0.0-rc.42",
+    "@vuepress/plugin-medium-zoom": "^2.0.0-rc.42",
     "@vuepress/theme-default": "^2.0.0-rc.42",
     "vuepress": "^2.0.0-rc.15"
   },
