--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,13 +9,12 @@ on:
   # trigger deployment manually
   workflow_dispatch:
 
+runs:
+  using: 'node20'
+
 jobs:
   docs:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: 20
 
     steps:
       - uses: actions/checkout@v4
@@ -35,7 +34,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           # choose node.js version to use
-          node-version: ${{ matrix.node-version }}
+          node-version: 20
           # cache deps for pnpm
           cache: pnpm
 
