--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,9 +11,6 @@ on:
 
 jobs:
   docs:
-    runs:
-      using: 'node20'
-
     runs-on: ubuntu-latest
 
     steps:
@@ -36,7 +33,7 @@ jobs:
           # choose node.js version to use
           node-version: 20
           # cache deps for pnpm
-          cache: pnpm
+          #cache: pnpm
 
       # run build script
       - name: Build VuePress site
