--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,7 +20,7 @@ jobs:
           fetch-depth: 0
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v4
         with:
           # choose pnpm version to use
           version: 8
@@ -33,7 +33,7 @@ jobs:
           # choose node.js version to use
           node-version: 20
           # cache deps for pnpm
-          #cache: pnpm
+          cache: pnpm
 
       # run build script
       - name: Build VuePress site
