--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vuepress/plugin-feed": "^2.0.0-rc.42",
     "@vuepress/plugin-google-analytics": "^2.0.0-rc.42",
     "@vuepress/plugin-medium-zoom": "^2.0.0-rc.42",
+    "@vuepress/plugin-photo-swipe": "^2.0.0-rc.42",
     "@vuepress/theme-default": "^2.0.0-rc.42",
     "vuepress": "^2.0.0-rc.15"
   },
