--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vuepress/plugin-medium-zoom": "^2.0.0-rc.42",
     "@vuepress/plugin-photo-swipe": "^2.0.0-rc.42",
     "@vuepress/theme-default": "^2.0.0-rc.42",
+    "vue": "^3.5.2",
     "vuepress": "^2.0.0-rc.15"
   },
   "scripts": {
